--- a/english-for-kids/src/index.html
+++ b/english-for-kids/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>english-for-kids</title>
+    <link rel="shortcut icon" href="https://img.icons8.com/color/48/000000/bowler-hat.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
   </head>
