fix: swiper layout

--- a/movie-search/src/index.html
+++ b/movie-search/src/index.html
@@ -17,38 +17,23 @@
       <h1 class="title">Movie Search</h1>
     </div>
   </header>
-  <div class="content-fiels">
+  <div class="content-field">
     <div class="wrapper">
       <div class="search-field">
         <form class="search" role="search" method="get" action="/">
-          <svg class="icon icon-search" viewBox="0 0 483.083 483.083">
-            <g>
-              <g>
-                <path d="M332.74,315.35c30.883-33.433,50.15-78.2,50.15-127.5C382.89,84.433,298.74,0,195.04,0S7.19,84.433,7.19,187.85
-        S91.34,375.7,195.04,375.7c42.217,0,81.033-13.883,112.483-37.4l139.683,139.683c3.4,3.4,7.65,5.1,11.9,5.1s8.783-1.7,11.9-5.1
-        c6.517-6.517,6.517-17.283,0-24.083L332.74,315.35z M41.19,187.85C41.19,103.133,110.04,34,195.04,34
-        c84.717,0,153.85,68.85,153.85,153.85S280.04,341.7,195.04,341.7S41.19,272.567,41.19,187.85z">
-              </g>
-            </g>
-          </svg>
+          <img src="https://cdn2.iconfinder.com/data/icons/mixed-rounded-flat-icon/512/magnifier_glass-512.png"
+            class="icon" alt="">
           <input type="search" name="s" placeholder="Search Movie">
           <div class="container">
             <div class="loader"></div>
           </div>
           <img class="icon" src="https://s1.iconbird.com/ico/2013/11/504/w128h1281385326489keyboard.png" alt="keyboard">
         </form>
-        <!-- Slider main container -->
         <div class="swiper-container">
-          <!-- Additional required wrapper -->
           <div class="swiper-wrapper">
-            <!-- Slides -->
-            <div class="swiper-slide">Slide 1</div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
           </div>
-          <!-- If we need navigation buttons -->
-          <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
         </div>
       </div>
     </div>
@@ -58,7 +43,7 @@
       <span class="school">RS School 2020q1</span>
       <div class="contact">
         <img class="icon" src="./assets/img/github-computer-icons-logo-github-thumbnail.png" alt="">
-        <a href="https://github.com/KarinaLogvina">My githab</a>
+        <a href="https://github.com/KarinaLogvina" target="_blank">My githab</a>
       </div>
     </div>
   </footer>
