--- a/fancy-weather/src/index.html
+++ b/fancy-weather/src/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="https://image.flaticon.com/icons/svg/2938/2938130.svg" type="image/x-icon">
+  <link href="https://fonts.googleapis.com/css2?family=Jura:wght@400;700&display=swap" rel="stylesheet">
   <title>Fancy weather</title>
 </head>
+
 <body>
   <div id="root"></div>
 </body>
+
 </html>
